--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_C_STANDARD 23)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MD")
 
 project(Markdown-CLI)
 message("Configuring ${CMAKE_PROJECT_NAME}...")
@@ -62,5 +63,6 @@ if(GTK1)
 	include_directories(${GTK_INCLUDE_DIRS})
 endif(GTK1)
 file(STRINGS sources.cmake SOURCES)
-add_executable(${MODULE_NAME} ${SOURCES})
+add_library(${MODULE_NAME} ${SOURCES})
 add_executable(md_html md_html.cpp)
+# target_link_options(md_html PRIVATE "/NODEFAULTLIB:MSVCRT")
