--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,16 +2,11 @@
 # Created by Robin Rowe 2024-12-13
 # License Open Source MIT
 
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.10)
 #set(CMAKE_C_STANDARD 23)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MD")
-#cmake_policy(SET CMP0091 NEW) # Enable MSVC_RUNTIME_LIBRARY
-#set(MSVC_RUNTIME_LIBRARY MultiThreadedDLL)
-#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
-#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
 
 project(Markdown-CLI)
 message("Configuring ${CMAKE_PROJECT_NAME}...")
@@ -41,7 +36,8 @@ if(UNISTD)
 endif(UNISTD)
 
 file(STRINGS sources.cmake SOURCES)
+set(MODULE_NAME ${CMAKE_PROJECT_NAME}_lib)
 add_library(${MODULE_NAME} ${SOURCES})
-#link_libraries(stdc++)
+link_libraries(${MODULE_NAME})
 add_executable(md_html md_html.cpp)
-#target_link_options(md_html PRIVATE "/NODEFAULTLIB:MSVCRT")
+
